--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -79,3 +79,11 @@ button {
       font-size: 14px;
   }
 }
+
+.intro-image{ 
+  height: 100px;
+}
+
+.support-image{
+  height: 100px;
+}
